/*
  Interface voor gebruik door Auto en Fiets met een methode om bedrag te zetten
 */

package nl.hva.garage;

public interface Reparatie {
    void kosten(int bedrag);
}
